tests/ui/cve/cve_2020_35888/cve_2020_35888_cross_stmt.stderr
error: dropped an possibly-uninitialized value
  --> tests/ui/cve/cve_2020_35888/cve_2020_35888_cross_stmt.rs:19:17
   |
LL |         let ptr = unsafe { alloc(layout) as *mut T };
   |                            ------------- memory allocated here
LL |         for i in 0..size {
LL |             let ptr_i = ptr.wrapping_offset(i as isize);
   |                             --------------------------- a maybe-relative pointer created here
LL |             unsafe {
LL |                 *ptr_i = template.clone();
   |                 ^^^^^^
   |                 |
   |                 original value is dropped here
   |                 the new value is assigned to here
   |
   = help: assigning to a dereferenced pointer will cause previous value to be dropped, and try using `ptr::write` instead
   = note: `#[deny(rpl::drop_uninit_value)]` on by default

error: aborting due to 1 previous error

